refactor: Use Java 11 Files.writeString
This reduces verbosity from getBytes.